# pypassrs

./: .gitignore  Cargo.toml  README.md  build-wheels.sh  pyproject.toml  setup.py
src/: lib.rs
